--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@
   width: 100%;
   height: 100vh;
   background-image: linear-gradient(rgba(0,0,0,0.75),rgba(0,0,0,0.75)),url(https://raw.githubusercontent.com/Jag4nshi/iamanonymous/main/background.jpg);
+  text-align: center;
   align-items: center;
   justify-content: center;
   background-size: cover;
