--- a/style.css
+++ b/style.css
@@ -25,6 +25,8 @@
   background: url(https://raw.githubusercontent.com/Jag4nshi/stranger/main/IMG%2001.jpg);
   background-size: cover;
   background-position: center;
+  position: relative;
+  transition: width 0.5s;
 }
 .img-box:nth-child(2){
   background: url(https://raw.githubusercontent.com/Jag4nshi/stranger/main/IMG%2002.jpg);
@@ -35,4 +37,20 @@
   background: url(https://raw.githubusercontent.com/Jag4nshi/stranger/main/IMG%2003.jpg);
   background-size: cover;
   background-position: center;
+}
+.img-box h3{
+  color: #fff;
+  position: absolute;
+  bottom: 0;
+  left: 30px;
+  opacity: 0;
+  transition: bottom 0.5s, opacity 0.5s;
+}
+.img-box:hover{
+  width: 300px;
+  cursor: pointer;
+}
+.img-box:hover h3{
+  opacity: 1;
+  bottom: 25px;
 }
