--- a/style.css
+++ b/style.css
@@ -4,10 +4,15 @@
   font-family: poppins;
   box-sizing: border-box;
 }
+.body{
+  background-image: linear-gradient(rgba(0,0,0,0.75),rgba(0,0,0,0.75)),url(https://raw.githubusercontent.com/Jag4nshi/iamanonymous/main/background.jpg);
+  background-size: cover;
+}
 .container{
   width: 100%;
   height: 100vh;
-  background: #f2e9ff;
+  background: transparent;
+  opacity: 0.5;
   display: flex;
   align-items: center;
   justify-content: center;
