--- a/style.css
+++ b/style.css
@@ -4,14 +4,10 @@
   font-family: poppins;
   box-sizing: border-box;
 }
-.body{
-  background-image: linear-gradient(rgba(0,0,0,0.75),rgba(0,0,0,0.75)),url(https://raw.githubusercontent.com/Jag4nshi/iamanonymous/main/background.jpg);
-  background-size: cover;
-}
 .container{
   width: 100%;
   height: 100vh;
-  opacity: 0.5;
+  background: #fefbbd;
   display: flex;
   align-items: center;
   justify-content: center;
