--- a/style.css
+++ b/style.css
@@ -11,7 +11,8 @@
 .container{
   width: 100%;
   height: 100vh;
-  background: transparent;
+  background: #000;
+  opacity: 0.5;
   display: flex;
   align-items: center;
   justify-content: center;
