--- a/style.css
+++ b/style.css
@@ -25,19 +25,19 @@
   border-radius: 50px;
   background: url(https://raw.githubusercontent.com/Jag4nshi/stranger/main/IMG%2001.jpg);
   background-size: cover;
-  background-position: center;
+  background-position: right center;
   position: relative;
   transition: width 0.5s;
 }
 .img-box:nth-child(2){
   background: url(https://raw.githubusercontent.com/Jag4nshi/stranger/main/IMG%2002.jpg);
   background-size: cover;
-  background-position: center;
+  background-position: right center;
 }
 .img-box:nth-child(3){
   background: url(https://raw.githubusercontent.com/Jag4nshi/stranger/main/IMG%2003.jpg);
   background-size: cover;
-  background-position: center;
+  background-position: right center;
 }
 .img-box h3{
   color: #fff;
