--- a/style.css
+++ b/style.css
@@ -7,8 +7,7 @@
 .container{
   width: 100%;
   height: 100vh;
-  background-image: linear-gradient(rgba(0,0,0,0.75),rgba(0,0,0,0.75)),url(https://raw.githubusercontent.com/Jag4nshi/iamanonymous/main/background.jpg);
-  background-size: cover;
+  background: #F5F5D1;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -25,19 +24,19 @@
   border-radius: 50px;
   background: url(https://raw.githubusercontent.com/Jag4nshi/stranger/main/IMG%2001.jpg);
   background-size: cover;
-  background-position: right center;
+  background-position: center;
   position: relative;
   transition: width 0.5s;
 }
 .img-box:nth-child(2){
   background: url(https://raw.githubusercontent.com/Jag4nshi/stranger/main/IMG%2002.jpg);
   background-size: cover;
-  background-position: right center;
+  background-position: center;
 }
 .img-box:nth-child(3){
   background: url(https://raw.githubusercontent.com/Jag4nshi/stranger/main/IMG%2003.jpg);
   background-size: cover;
-  background-position: right center;
+  background-position: center;
 }
 .img-box h3{
   color: #fff;
