--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 *{
   margin: 0;
   pading: 0;
-  font-family: poppins;
+  font-family: 'Poppins', sans-serif;
   box-sizing: border-box;
 }
 .container{
