--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  position: relative;
 }
 .gallery{
   display: flex;
@@ -53,4 +54,16 @@
 .img-box:hover h3{
   opacity: 1;
   bottom: 25px;
+}
+.h1{
+  font-size: 80px;
+  position: absolute;
+  text-align: left;
+  color: #000;
+}
+.p {
+  font-size: 20px;
+  position: absolute;
+  text-align: left;
+  color: #000;
 }
