--- a/style.css
+++ b/style.css
@@ -58,12 +58,12 @@
 .text{
   font-family: 'Poppins', sans-serif;
 }
-.h1{
-  font-size: 200px;
-  color: #000;
+.text h1{
+  font-size: 80px;
+  margin-right: 50px;
 }
-.p{
+.text p{
   font-size: 20px;
-  color: #000;
   margin-top: 10px;
+  margin-left: 5px;
 }
