--- a/style.css
+++ b/style.css
@@ -63,7 +63,8 @@
   margin-right: 50px;
 }
 .text p{
-  font-size: 20px;
+  font-size: 15px;
   margin-top: 10px;
   margin-left: 5px;
+  margin-right: 5px;
 }
