--- a/style.css
+++ b/style.css
@@ -55,15 +55,14 @@
   opacity: 1;
   bottom: 25px;
 }
-.text{
-  font-family: 'Poppins', sans-serif;
-}
 .text h1{
   font-size: 80px;
   margin-right: 50px;
+  font-family: Times New Roman;
 }
 .text p{
   font-size: 20px;
   margin-top: 10px;
   margin-left: 5px;
+  font-family: Times New Roman;
 }
