--- a/style.css
+++ b/style.css
@@ -66,3 +66,10 @@
   margin-left: 5px;
   font-family: Times New Roman;
 }
+.text p:nth child(2){
+  font-size: 10px;
+  margin-top: 50px;
+  margin-left: 5px;
+  font-family: Times New Roman;
+  opacity: 0.5;
+}
