--- a/style.css
+++ b/style.css
@@ -66,10 +66,10 @@
   margin-left: 5px;
   font-family: Times New Roman;
 }
-.text p:nth child(2){
-  font-size: 10px;
+.text p:nth-child(3){
+  font-size: 15px;
   margin-top: 50px;
   margin-left: 5px;
   font-family: Times New Roman;
-  opacity: 0.5;
+  opacity: 0.7;
 }
