--- a/style.css
+++ b/style.css
@@ -47,6 +47,10 @@
   opacity: 0;
   transition: bottom 0.5s, opacity 0.5s;
 }
+.img-box h3 a{
+  text-decoration: none;
+  color: white;
+}
 .img-box:hover{
   width: 300px;
   cursor: pointer;
