--- a/style.css
+++ b/style.css
@@ -2,34 +2,78 @@
   margin: 0;
   padding: 0;
   font-family: Times New Roman;
+  box-sizing: border-box;
 }
 .container{
   width: 100%;
   height: 100vh;
   background: #F5F5D1;
+  display: flex;
   align-items: center;
   justify-content: center;
-  display:flex;
+  position: relative;
 }
-.image{
+.gallery{
   display: flex;
   align-items: center;
   justify-content: center;
 }
-img{
-  width: 400px;
+.img-box{
+  width: 100px;
   height: 500px;
   margin: 10px;
   border-radius: 50px;
+  background: url(https://raw.githubusercontent.com/Jag4nshi/stranger/main/IMG%2001.jpg);
+  background-size: cover;
+  background-position: center;
+  position: relative;
+  transition: width 0.5s;
+}
+.img-box:nth-child(2){
+  background: url(https://raw.githubusercontent.com/Jag4nshi/stranger/main/IMG%2002.jpg);
+  background-size: cover;
+  background-position: center;
+}
+.img-box:nth-child(3){
+  background: url(https://raw.githubusercontent.com/Jag4nshi/stranger/main/IMG%2003.jpg);
+  background-size: cover;
+  background-position: center;
+}
+.img-box h3{
+  color: #fff;
+  position: absolute;
+  bottom: 0;
+  left: 30px;
+  opacity: 0;
+  transition: bottom 0.5s, opacity 0.5s;
+}
+.img-box h3 a{
+  text-decoration: none;
+  color: white;
+}
+.img-box:hover{
+  width: 300px;
+  cursor: pointer;
+}
+.img-box:hover h3{
+  opacity: 1;
+  bottom: 25px;
 }
 .text h1{
-  font-size: 60px;
-  margin-left: 50px;
+  font-size: 70px;
+  margin-right: 50px;
   font-family: Times New Roman;
 }
 .text p{
-  font-size: 15px;
+  font-size: 30px;
   margin-top: 10px;
-  margin-right: 15px;
+  margin-left: 15px;
   font-family: Times New Roman;
+}
+.text p:nth-child(3){
+  font-size: 15px;
+  margin-top: 50px;
+  margin-left: 15px;
+  font-family: Times New Roman;
+  opacity: 0.7;
 }
